@startuml

skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

title List Users - Domain Model (US213)

hide circles
hide methods

package "User Management Subsystem" {

    class User {
        Email: id
        String: name
        String: phoneNumber
        Password: password
        boolean: active
    }

    class Email {
        String: value
    }

    class Password {
        String: hashedValue
    }

    interface UserRepository {
        +findAll(): List<User>
    }

    class ListUserController {
        +getAllUsersWithStatus(): List<String>
        +getAllUsers(): List<User>
    }

    ListUserController --> UserRepository : uses >
    ListUserController --> User : formats >

    User "1" --> "1" Email
    User "1" --> "1" Password
}

@enduml
